os/bluestore: fix free space update after bdev-expand in NCB mode.

Initially this was omitted due to read-only mode.

Fixes: https://tracker.ceph.com/issues/63858

Signed-off-by: Igor Fedotov <igor.fedotov@croit.io>
(cherry picked from commit f3061c41e420de9d626442079b2affc57da64b5a)